--- a/.github/workflows/issue_report.yml
+++ b/.github/workflows/issue_report.yml
@@ -15,5 +15,5 @@ jobs:
 
       - name: Report issues
         run: |
-          echo '## Weekly Issue Status' >  docs/issue_report/${{ steps.date.outputs.date }}.md
-          gh issue list --search "is:open sort:created-asc" --json "url,title,state,number" >> docs/issue_report/${{ steps.date.outputs.date }}.json
+          echo '## Weekly Issue Status' >  ./${{ steps.date.outputs.date }}.md
+          gh issue list --search "is:open sort:created-asc" --json "url,title,state,number" >> ./${{ steps.date.outputs.date }}.json
