--- a/.github/workflows/issue_report.yml
+++ b/.github/workflows/issue_report.yml
@@ -17,4 +17,4 @@ jobs:
         run: |
           echo '## Weekly Issue Status' >  ./${{ steps.date.outputs.date }}.md
           gh issue list --search "is:open sort:created-asc" --json "url,title,state,number" >> ./${{ steps.date.outputs.date }}.json
-          echo ./${{ steps.date.outputs.date }}.json
+          cat ./${{ steps.date.outputs.date }}.json
