--- a/.github/workflows/issue_report.yml
+++ b/.github/workflows/issue_report.yml
@@ -1,4 +1,4 @@
-name: Generate issues report
+name: Generate issues and workflow run report
 
 on: workflow_dispatch
 
@@ -21,5 +21,5 @@ jobs:
 
       - name: Report workflow runs
         run: |
-          gh run list --json "conclusion,createdAt,databaseId,displayTitle,event,headBranch,headSha,name,startedAt,status,updatedAt,url,workflowDatabaseId,workflowName" >> ./${{ steps.date.outputs.date }}_wk.json
+          gh run list --json "conclusion,createdAt,displayTitle,event,headBranch,name,startedAt,status,updatedAt,workflowName" >> ./${{ steps.date.outputs.date }}_wk.json
           cat ./${{ steps.date.outputs.date }}_wk.json
